--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.15.5",
     "hbs": "~4.0.1",
     "method-override": "^2.3.10",
+    "mime": "^2.3.1",
     "mongoose": "^5.0.0-rc2",
     "morgan": "~1.9.0",
     "nodemon": "^1.14.7",
