--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
-    "cookie-parser": "~1.4.3",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
-    "express": "~4.15.5",
-    "hbs": "~4.0.1",
+    "express": "^4.16.4",
+    "hbs": "^4.0.4",
     "method-override": "^2.3.10",
-    "mime": "^2.3.1",
-    "mongoose": "^5.0.0-rc2",
-    "morgan": "~1.9.0",
-    "nodemon": "^1.14.7",
+    "mime": "^2.4.2",
+    "mongoose": "^5.5.3",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.11",
     "serve-favicon": "~2.4.5"
   }
 }
